adding info window for turret defense

--- a/imperial-starfleet/src/app/app.component.html
+++ b/imperial-starfleet/src/app/app.component.html
@@ -1,3 +1,4 @@
+<router-outlet></router-outlet>
 <app-death-square></app-death-square>
 <app-tie-fighter></app-tie-fighter>
 <app-tie-fighter></app-tie-fighter>
